[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemies/ghost.png" type="Texture" id=1]
[ext_resource path="res://scripts/entities/enemies/Enemy.gd" type="Script" id=2]
[ext_resource path="res://scripts/ai/move/FlyTowardsPlayerMovement.gd" type="Script" id=3]
[ext_resource path="res://assets/enemies/ghost-hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/enemies/ghost-die.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/objects/remains/torn_fabric.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/particles/generic_shadow_particles.tres" type="CubeMesh" id=7]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.30687, 0.394972, 0.151735 )

[sub_resource type="ParticlesMaterial" id=2]
flag_align_y = true
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
spread = 36.72
gravity = Vector3( 0, -5, 0 )
initial_velocity = 3.0
initial_velocity_random = 0.37
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Ghost" type="KinematicBody"]
collision_layer = 4
script = ExtResource( 2 )
gravity = 0.0
knock_back_resistance = 0.1
movement = ExtResource( 3 )
collision_damage = 1.0
death_remains = [ ExtResource( 6 ), ExtResource( 6 ) ]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.883757, 0, 0, 0, 0.883757, 0, 0, 0, 0.883757, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform( 1.57955, 0, 0, 0, 1.57955, 0, 0, 0, 0.745852, 0, 0, 0 )
cast_shadow = 3
alpha_cut = 2
texture = ExtResource( 1 )

[node name="hurtSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 4 )
unit_db = 2.0

[node name="deathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 1.0

[node name="hurtParticles" type="Particles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.221808, 0 )
emitting = false
amount = 12
lifetime = 2.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 2 )
draw_pass_1 = ExtResource( 7 )
